--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <!-- menu -->
     <aside id="menu">
-        <div class="inner">
-            <a href="javascript:;">
+        <div class="inner flex-row-vertical">
+<!--             <a href="javascript:;">
                 <i class="iconfont icon-ego-menu"></i>
-            </a>
+            </a> -->
             <div class="user-info">
                 <div class="user-warp">
                     <a href="/">
@@ -31,7 +31,7 @@
                     <a href="/">crazyzhanyue.cn</a>
                 </div>
             </div>
-            <nav class="scroll-warp">
+            <nav class="scroll-warp flex-col">
                 <ul class="nav">
                     <li>
                         <a href="">11111111111</a>
@@ -178,7 +178,85 @@
                         <a href="">11111111111</a>
                     </li>
                                  <li>
-                        <a href="">11111111111</a>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">22222222222</a>
+                    </li>
+                                 <li>
+                        <a href="">33333333333</a>
                     </li>
 
                 </ul>
