--- a/index.html
+++ b/index.html
@@ -509,9 +509,6 @@
 
 
 <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript">
-
-
-</script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
