--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <a href="/">crazyzhanyue.cn</a>
                 </div>
             </div>
+
+<a href="mailto"></a>
+
             <nav class="scroll-warp">
                 <ul class="nav">
                     <li>
@@ -508,7 +511,7 @@
 </a>
 
 
-<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<!-- <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script> -->
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
