--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 </style>
 </head>
 <body>
-    <div id="loading" class=""></div>
-
+    <div id="loading" class="active"></div>
     <!-- menu -->
     <aside id="menu">
         <div class="inner flex-column">
@@ -32,8 +31,7 @@
                 </div>
             </div>
 
-<a href="mailto"></a>
-
+            <a href="mailto"></a>
             <nav class="scroll-warp">
                 <ul class="nav">
                     <li>
@@ -127,15 +125,15 @@
     <main id="main">
         <header id="header" class="top-header">
             <div class="flex-row">
-                <a class="header-icon" href="javascript:;" id="menu-toggle">
-                 <i class="iconfont icon-ego-menu"></i>
-             </a>
-             <!-- top标题 -->
-             <h2 class="flex-col text-clip">
-                 xxxxxxxxxxxxxxxxxxxx
-             </h2>
-             <!-- 搜索框 -->
-             <div id="search-warp" id="search-warp">
+                <a class="header-icon" href="javascript:;" id="menu-open">
+                   <i class="iconfont icon-ego-menu"></i>
+               </a>
+               <!-- top标题 -->
+               <h2 class="flex-col text-clip">
+                   xxxxxxxxxxxxxxxxxxxx
+               </h2>
+               <!-- 搜索框 -->
+               <div id="search-warp" id="search-warp">
                 <a class="header-icon" href="javascript:;" id="back">
                     <i class="iconfont icon-backoff"></i>
                 </a>
@@ -192,7 +190,7 @@
                 </ul>
             </div>
         </li>
-                <li class="article-list-item">
+        <li class="article-list-item">
             <h3 class="article-title">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
@@ -224,7 +222,7 @@
                 </ul>
             </div>
         </li>
-                <li class="article-list-item">
+        <li class="article-list-item">
             <h3 class="article-title">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
@@ -256,7 +254,7 @@
                 </ul>
             </div>
         </li>
-                <li class="article-list-item">
+        <li class="article-list-item">
             <h3 class="article-title">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
@@ -288,7 +286,7 @@
                 </ul>
             </div>
         </li>
-                <li class="article-list-item">
+        <li class="article-list-item">
             <h3 class="article-title">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
@@ -320,7 +318,7 @@
                 </ul>
             </div>
         </li>
-                <li class="article-list-item">
+        <li class="article-list-item">
             <h3 class="article-title">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
@@ -352,7 +350,7 @@
                 </ul>
             </div>
         </li>
-                <li class="article-list-item">
+        <li class="article-list-item">
             <h3 class="article-title">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
@@ -384,7 +382,7 @@
                 </ul>
             </div>
         </li>
-                <li class="article-list-item">
+        <li class="article-list-item">
             <h3 class="article-title">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
@@ -416,7 +414,7 @@
                 </ul>
             </div>
         </li>
-                <li class="article-list-item">
+        <li class="article-list-item">
             <h3 class="article-title">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
@@ -502,7 +500,7 @@
 <!-- main end -->
 
 <!-- mask -->
-<div id="mask" class="mask"></div>
+<div id="mask"></div>
 <!-- mask end -->
 
 <!-- gotop -->
@@ -512,6 +510,13 @@
 
 
 <!-- <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script> -->
+<script type="text/javascript" src="js/outils.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript">
+
+  var to = outils.getScrollTop();
+  var too = outils.offset();
+  // var to = outils.scrollTo();
+</script>
 </body>
 </html>
