--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
             <nav class="scroll-warp">
                 <ul class="nav">
                     <li>
-                        <a href="">11111111444444444444444444444111</a>
-                    </li>
-                    <li>
                         <a href="">11111111111</a>
                     </li>
                     <li>
@@ -60,45 +57,6 @@
                     </li>
                     <li>
                         <a href="">11111111111</a>
-                    </li>
-                    <li>
-                        <a href="">11111111111</a>
-                    </li>
-                    <li>
-                        <a href="">11111111111</a>
-                    </li>
-                    <li>
-                        <a href="">11111111111</a>
-                    </li>
-                    <li>
-                        <a href="">22222222222</a>
-                    </li>
-                    <li>
-                        <a href="">22222222222</a>
-                    </li>
-                    <li>
-                        <a href="">22222222222</a>
-                    </li>
-                    <li>
-                        <a href="">22222222222</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
                     </li>
                     <li>
                         <a href="">33333333333</a>
@@ -126,14 +84,14 @@
         <header id="header" class="top-header">
             <div class="flex-row">
                 <a class="header-icon" href="javascript:;" id="menu-open">
-                   <i class="iconfont icon-ego-menu"></i>
-               </a>
-               <!-- top标题 -->
-               <h2 class="flex-col text-clip">
-                   xxxxxxxxxxxxxxxxxxxx
-               </h2>
-               <!-- 搜索框 -->
-               <div id="search-warp" id="search-warp">
+                 <i class="iconfont icon-ego-menu"></i>
+             </a>
+             <!-- top标题 -->
+             <h2 class="header-title flex-col text-clip">
+                 xxxxxxxxxxxxxxxxxxxx
+             </h2>
+             <!-- 搜索框 -->
+             <div id="search-warp" id="search-warp">
                 <a class="header-icon" href="javascript:;" id="back">
                     <i class="iconfont icon-backoff"></i>
                 </a>
@@ -496,6 +454,7 @@
         <p>@黑夜</p>
     </div>
 </footer>
+
 </main>
 <!-- main end -->
 
