--- a/article.html
+++ b/article.html
@@ -14,10 +14,10 @@
 </style>
 </head>
 <body>
-    <div id="loading" class=""></div>
+    <div id="loading" class="active"></div>
 
     <!-- menu -->
-    <aside id="menu">
+    <aside id="menu" class="hide">
         <div class="inner flex-column">
             <a href="javascript:;" id="menu-off">
                 <i class="iconfont icon-guanbi"></i>
@@ -63,57 +63,6 @@
                     <li>
                         <a href="">11111111111</a>
                     </li>
-                    <li>
-                        <a href="">11111111111</a>
-                    </li>
-                    <li>
-                        <a href="">11111111111</a>
-                    </li>
-                    <li>
-                        <a href="">22222222222</a>
-                    </li>
-                    <li>
-                        <a href="">22222222222</a>
-                    </li>
-                    <li>
-                        <a href="">22222222222</a>
-                    </li>
-                    <li>
-                        <a href="">22222222222</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">33333333333</a>
-                    </li>
-                    <li>
-                        <a href="">aaaaaaaaaa</a>
-                    </li>
                 </ul>
             </nav>
         </div>
@@ -124,7 +73,7 @@
     <main id="main">
         <header id="header" class="top-header">
             <div class="flex-row">
-                <a class="header-icon" href="javascript:;" id="menu-toggle">
+                <a class="header-icon" href="javascript:;" id="menu-open">
                    <i class="iconfont icon-ego-menu"></i>
                </a>
                <!-- top标题 -->
@@ -219,11 +168,8 @@
     <i class="iconfont icon-top"></i>
 </a>
 
+<script type="text/javascript" src="js/outils.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 
-<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript">
-
-
-</script>
 </body>
 </html>
