--- a/article.html
+++ b/article.html
@@ -74,32 +74,32 @@
         <header id="header" class="top-header">
             <div class="flex-row">
                 <a class="header-icon" href="javascript:;" id="menu-open">
-                   <i class="iconfont icon-ego-menu"></i>
-               </a>
-               <!-- top标题 -->
-               <h2 class="flex-col text-clip">
-                   xxxxxxxxxxxxxxxxxxxx
-               </h2>
-               <!-- 搜索框 -->
-               <div id="search-warp" id="search-warp">
-                <a class="header-icon" href="javascript:;" id="back">
-                    <i class="iconfont icon-backoff"></i>
-                </a>
-                <input type="text" id="key" name="" autocomplete="off" placeholder="输入感兴趣的关键字">
-                <a class="header-icon" href="javascript:;" id="search">
-                    <i class="iconfont icon-sousuo"></i>
-                </a>
-            </div>
-            <!-- 分享 -->
-            <a class="header-icon" href="" id="menuShare">
-              <i class="iconfont icon-msnui-sns"></i>
-          </a>
-      </div>
-  </header>
+                 <i class="iconfont icon-ego-menu"></i>
+             </a>
+             <!-- top标题 -->
+             <h2 class="header-title flex-col text-clip">
+               xxxxxxxxxxxxxxxxxxxx
+           </h2>
+           <!-- 搜索框 -->
+           <div id="search-warp" id="search-warp">
+            <a class="header-icon" href="javascript:;" id="back">
+                <i class="iconfont icon-backoff"></i>
+            </a>
+            <input type="text" id="key" name="" autocomplete="off" placeholder="输入感兴趣的关键字">
+            <a class="header-icon" href="javascript:;" id="search">
+                <i class="iconfont icon-sousuo"></i>
+            </a>
+        </div>
+        <!-- 分享 -->
+        <a class="header-icon" href="" id="menuShare">
+          <i class="iconfont icon-msnui-sns"></i>
+      </a>
+  </div>
+</header>
 
-  <header class="content-header"></header>
+<header class="content-header"></header>
 
-  <div id="article" class="warp">
+<div id="article" class="warp">
     <div class="article-detail">
         <h1 class="title">xxxxxxxxxxxxxx</h1>
         <h5 class="subtitle">22222222222</h5>
