--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                  xxxxxxxxxxxxxxxxxxxx
              </h2>
              <!-- 搜索框 -->
-             <div id="search-warp" id="search-warp">
+             <div id="search-warp" class="search-warp">
                 <a class="header-icon" href="javascript:;" id="back">
                     <i class="iconfont icon-backoff"></i>
                 </a>
-                <input type="text" id="key" name="" autocomplete="off" placeholder="输入感兴趣的关键字">
+                <input type="text" id="key" class="search-input" name="" autocomplete="off" placeholder="输入感兴趣的关键字">
                 <a class="header-icon" href="javascript:;" id="search">
                     <i class="iconfont icon-sousuo"></i>
                 </a>
@@ -109,15 +109,15 @@
 
   <header class="content-header index-header">
     <div class="warp">
-        <h1 class="title">xxxxxxxxxxxxxx</h1>
-        <h5 class="subtitle">22222222222</h5>
+        <h1 class="title fade-scale">xxxxxxxxxxxxxx</h1>
+        <h5 class="subtitle  fade-scale">22222222222</h5>
     </div>
 </header>
 
 <section  class="warp">
     <ul class="article-list">
-        <li class="article-list-item">
-            <h3 class="article-title">
+        <li class="article-list-item fade">
+            <h3 class="article-title post-title-link">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
             <time>
@@ -148,8 +148,8 @@
                 </ul>
             </div>
         </li>
-        <li class="article-list-item">
-            <h3 class="article-title">
+        <li class="article-list-item fade">
+            <h3 class="article-title post-title-link">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
             <time>
@@ -180,8 +180,8 @@
                 </ul>
             </div>
         </li>
-        <li class="article-list-item">
-            <h3 class="article-title">
+        <li class="article-list-item fade">
+            <h3 class="article-title post-title-link">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
             <time>
@@ -212,8 +212,8 @@
                 </ul>
             </div>
         </li>
-        <li class="article-list-item">
-            <h3 class="article-title">
+        <li class="article-list-item fade">
+            <h3 class="article-title post-title-link">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
             <time>
@@ -244,8 +244,8 @@
                 </ul>
             </div>
         </li>
-        <li class="article-list-item">
-            <h3 class="article-title">
+        <li class="article-list-item fade">
+            <h3 class="article-title post-title-link">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
             <time>
@@ -276,8 +276,8 @@
                 </ul>
             </div>
         </li>
-        <li class="article-list-item">
-            <h3 class="article-title">
+        <li class="article-list-item fade">
+            <h3 class="article-title post-title-link">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
             <time>
@@ -308,8 +308,8 @@
                 </ul>
             </div>
         </li>
-        <li class="article-list-item">
-            <h3 class="article-title">
+        <li class="article-list-item fade">
+            <h3 class="article-title post-title-link">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
             <time>
@@ -340,8 +340,8 @@
                 </ul>
             </div>
         </li>
-        <li class="article-list-item">
-            <h3 class="article-title">
+        <li class="article-list-item fade">
+            <h3 class="article-title post-title-link">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
             <time>
@@ -372,8 +372,8 @@
                 </ul>
             </div>
         </li>
-        <li class="article-list-item">
-            <h3 class="article-title">
+        <li class="article-list-item fade">
+            <h3 class="article-title post-title-link">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
             <time>
@@ -405,8 +405,8 @@
             </div>
         </li>
 
-        <li class="article-list-item">
-            <h3 class="article-title">
+        <li class="article-list-item fade">
+            <h3 class="article-title post-title-link">
                 <a href="">那就可能哦版本都是vfdsfvsddfsd1</a>
             </h3>
             <time>
@@ -471,6 +471,8 @@
 <!-- <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script> -->
 <script type="text/javascript" src="js/outils.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<!-- <script type="text/javascript" src="js/search.js"></script> -->
+<script type="text/javascript" src="js/ajax.js"></script>
 <script type="text/javascript">
 
   var to = outils.getScrollTop();
