--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet"  href="iconfont/iconfont.css" />
+    <link rel="stylesheet"  href="css/waves.min.css" />
     <link rel="stylesheet"  href="css/style.css" />
     <style type="text/css">
 
@@ -18,7 +19,7 @@
     <!-- menu -->
     <aside id="menu">
         <div class="inner flex-column">
-            <a href="javascript:;" id="menu-off">
+            <a href="javascript:;" id="menu-off" class="waves-circle-btn">
                 <i class="iconfont icon-guanbi"></i>
             </a>
             <div class="user-info">
@@ -83,7 +84,7 @@
     <main id="main">
         <header id="header" class="top-header">
             <div class="flex-row">
-                <a class="header-icon" href="javascript:;" id="menu-open">
+                <a class="header-icon waves-circle-btn" href="javascript:;" id="menu-open">
                    <i class="iconfont icon-ego-menu"></i>
                </a>
                <!-- top标题 -->
@@ -92,20 +93,21 @@
                </h2>
                <!-- 搜索框 -->
                <div id="search-warp" class="search-warp">
-                <a class="header-icon" href="javascript:;" id="search-back">
+                <a class="header-icon waves-circle-btn" href="javascript:;" id="search-back">
                     <i class="iconfont icon-backoff"></i>
                 </a>
                 <input type="text" id="key" class="search-input" name="" autocomplete="off" placeholder="输入感兴趣的关键字">
-                <a class="header-icon" href="javascript:;" id="search">
+                <a class="header-icon waves-circle-btn" href="javascript:;" id="search">
                     <i class="iconfont icon-sousuo" id="search-icon"></i>
                 </a>
             </div>
             <!-- 分享 -->
-            <a class="header-icon" href="javascript:;" id="menuShare">
+            <a class="header-icon waves-circle-btn" href="javascript:;" id="menuShare">
               <i class="iconfont icon-msnui-sns"></i>
           </a>
       </div>
   </header>
+
 
   <header class="content-header index-header">
     <div class="warp">
@@ -457,7 +459,7 @@
 <!-- mask end -->
 
 <!-- gotop -->
-<a href="javascript:;" id="gotop">
+<a href="javascript:;" id="gotop" class="waves-circle-btn">
     <i class="iconfont icon-top"></i>
 </a>
 
@@ -510,6 +512,7 @@
         REWARD: false,
     }
 </script>
+<script type="text/javascript" src="js/waves.min.js"></script>
 <script type="text/javascript" src="js/outils.min.js"></script>
 <script type="text/javascript" src="js/ajax.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
