--- a/tags.html
+++ b/tags.html
@@ -8,6 +8,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet"  href="iconfont/iconfont.css" />
+    <link rel="stylesheet"  href="css/waves.min.css" />
     <link rel="stylesheet"  href="css/style.css" />
     <style type="text/css">
 
@@ -18,7 +19,7 @@
     <!-- menu -->
     <aside id="menu">
         <div class="inner flex-column">
-            <a href="javascript:;" id="menu-off">
+            <a href="javascript:;" id="menu-off" class="waves-circle-btn">
                 <i class="iconfont icon-guanbi"></i>
             </a>
             <div class="user-info">
@@ -83,7 +84,7 @@
     <main id="main">
         <header id="header" class="top-header">
             <div class="flex-row">
-                <a class="header-icon" href="javascript:;" id="menu-open">
+                <a class="header-icon waves-circle-btn" href="javascript:;" id="menu-open">
                    <i class="iconfont icon-ego-menu"></i>
                </a>
                <!-- top标题 -->
@@ -92,16 +93,16 @@
                </h2>
                <!-- 搜索框 -->
                <div id="search-warp" class="search-warp">
-                <a class="header-icon" href="javascript:;" id="search-back">
+                <a class="header-icon waves-circle-btn" href="javascript:;" id="search-back">
                     <i class="iconfont icon-backoff"></i>
                 </a>
                 <input type="text" id="key" class="search-input" name="" autocomplete="off" placeholder="输入感兴趣的关键字">
-                <a class="header-icon" href="javascript:;" id="search">
+                <a class="header-icon waves-circle-btn" href="javascript:;" id="search">
                     <i class="iconfont icon-sousuo" id="search-icon"></i>
                 </a>
             </div>
             <!-- 分享 -->
-            <a class="header-icon" href="javascript:;" id="menuShare">
+            <a class="header-icon waves-circle-btn" href="javascript:;" id="menuShare">
               <i class="iconfont icon-msnui-sns"></i>
           </a>
       </div>
@@ -112,38 +113,37 @@
         <h1 class="title fade-scale">xxxxxxxxxxxxxx</h1>
         <h5 class="subtitle  fade-scale">22222222222</h5>
     </div>
-    <div class="tabs-bar container" id="tabsWarp">
+    <div class="tabs-bar warp" id="tabsWarp">
         <nav class="tags-list">
-            <a href="/tags" style="-webkit-order:-1;order:-1" class="tags-list-item waves-effect waves-button waves-light
-            ">全部</a>
-            <a href="/tags/API/" style="-webkit-order:0;order:0" class="tags-list-item waves-effect waves-button waves-light">API</a>
-            <a href="/tags/开发者/" style="-webkit-order:1;order:1" class="tags-list-item waves-effect waves-button waves-light">开发者</a>
-            <a href="/tags/Chrome/" style="-webkit-order:2;order:2" class="tags-list-item waves-effect waves-button waves-light">Chrome</a>
-            <a href="/tags/性能优化/" style="-webkit-order:3;order:3" class="tags-list-item waves-effect waves-button waves-light">性能优化</a>
-            <a href="/tags/API/" style="-webkit-order:0;order:0" class="tags-list-item waves-effect waves-button waves-light">API</a>
-            <a href="/tags/开发者/" style="-webkit-order:1;order:1" class="tags-list-item waves-effect waves-button waves-light">开发者</a>
-            <a href="/tags/Chrome/" style="-webkit-order:2;order:2" class="tags-list-item waves-effect waves-button waves-light">Chrome</a>
-            <a href="/tags/性能优化/" style="-webkit-order:3;order:3" class="tags-list-item waves-effect waves-button waves-light">性能优化</a>
-            <a href="/tags/API/" style="-webkit-order:0;order:0" class="tags-list-item waves-effect waves-button waves-light">API</a>
-            <a href="/tags/开发者/" style="-webkit-order:1;order:1" class="tags-list-item waves-effect waves-button waves-light">开发者</a>
-            <a href="/tags/Chrome/" style="-webkit-order:2;order:2" class="tags-list-item waves-effect waves-button waves-light">Chrome</a>
-            <a href="/tags/性能优化/" style="-webkit-order:3;order:3" class="tags-list-item waves-effect waves-button waves-light">性能优化</a>
-            <a href="/tags/API/" style="-webkit-order:0;order:0" class="tags-list-item waves-effect waves-button waves-light">API</a>
-            <a href="/tags/开发者/" style="-webkit-order:1;order:1" class="tags-list-item waves-effect waves-button waves-light active">开发者</a>
-            <a href="/tags/Chrome/" style="-webkit-order:2;order:2" class="tags-list-item waves-effect waves-button waves-light">Chrome</a>
-            <a href="/tags/性能优化/" style="-webkit-order:3;order:3" class="tags-list-item waves-effect waves-button waves-light">性能优化</a>
-            <a href="/tags/API/" style="-webkit-order:0;order:0" class="tags-list-item waves-effect waves-button waves-light">API</a>
-            <a href="/tags/开发者/" style="-webkit-order:1;order:1" class="tags-list-item waves-effect waves-button waves-light">开发者</a>
-            <a href="/tags/Chrome/" style="-webkit-order:2;order:2" class="tags-list-item waves-effect waves-button waves-light">Chrome</a>
-            <a href="/tags/性能优化/" style="-webkit-order:3;order:3" class="tags-list-item waves-effect waves-button waves-light">性能优化</a>
+            <a href="/tags" style="-webkit-order:-1;order:-1" class="tags-list-item waves-btn">全部</a>
+            <a href="/tags/API/" style="-webkit-order:0;order:0" class="active tags-list-item waves-btn">API</a>
+            <a href="/tags/开发者/" style="-webkit-order:1;order:1" class="tags-list-item waves-btn">开发者</a>
+            <a href="/tags/Chrome/" style="-webkit-order:2;order:2" class="tags-list-item waves-btn">Chrome</a>
+            <a href="/tags/性能优化/" style="-webkit-order:3;order:3" class="tags-list-item waves-btn">性能优化</a>
+            <a href="/tags/API/" style="-webkit-order:0;order:0" class="tags-list-item waves-btn">API</a>
+            <a href="/tags/开发者/" style="-webkit-order:1;order:1" class="tags-list-item waves-btn">开发者</a>
+            <a href="/tags/Chrome/" style="-webkit-order:2;order:2" class="tags-list-item waves-btn">Chrome</a>
+            <a href="/tags/性能优化/" style="-webkit-order:3;order:3" class="tags-list-item waves-btn">性能优化</a>
+            <a href="/tags/API/" style="-webkit-order:0;order:0" class="tags-list-item waves-btn">API</a>
+            <a href="/tags/开发者/" style="-webkit-order:1;order:1" class="tags-list-item waves-btn">开发者</a>
+            <a href="/tags/Chrome/" style="-webkit-order:2;order:2" class="tags-list-item waves-btn">Chrome</a>
+            <a href="/tags/性能优化/" style="-webkit-order:3;order:3" class="tags-list-item waves-btn">性能优化</a>
+            <a href="/tags/API/" style="-webkit-order:0;order:0" class="tags-list-item waves-btn">API</a>
+            <a href="/tags/开发者/" style="-webkit-order:1;order:1" class="tags-list-item waves-btn">开发者</a>
+            <a href="/tags/Chrome/" style="-webkit-order:2;order:2" class="tags-list-item waves-btn">Chrome</a>
+            <a href="/tags/性能优化/" style="-webkit-order:3;order:3" class="tags-list-item waves-btn">性能优化</a>
+            <a href="/tags/API/" style="-webkit-order:0;order:0" class="tags-list-item waves-btn">API</a>
+            <a href="/tags/开发者/" style="-webkit-order:1;order:1" class="tags-list-item waves-btn">开发者</a>
+            <a href="/tags/Chrome/" style="-webkit-order:2;order:2" class="tags-list-item waves-btn">Chrome</a>
+            <a href="/tags/性能优化/" style="-webkit-order:3;order:3" class="tags-list-item waves-btn">性能优化</a>
         </nav>
         <!-- PC show more-->
         <div class="tags-list-more">
-            <a href="javascript:;" id="tabBar" class="action tags-list-item waves-effect waves-circle waves-light">
+            <a href="javascript:;" id="tabBar" class="waves-circle-btn">
                 <i class="iconfont icon-more"></i>
-           </a>
-       </div>
-   </div>
+            </a>
+        </div>
+    </div>
 
 </header>
 
@@ -490,7 +490,7 @@
 <!-- mask end -->
 
 <!-- gotop -->
-<a href="javascript:;" id="gotop">
+<a href="javascript:;" id="gotop" class="waves-circle-btn">
     <i class="iconfont icon-top"></i>
 </a>
 
@@ -541,8 +541,10 @@
     var BLOG = {
         SHARE: true,
         REWARD: false,
+        TABBAR: true,
     }
 </script>
+<script type="text/javascript" src="js/waves.min.js"></script>
 <script type="text/javascript" src="js/outils.min.js"></script>
 <script type="text/javascript" src="js/ajax.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
