--- a/tags.html
+++ b/tags.html
@@ -139,7 +139,7 @@
         </nav>
         <!-- PC show more-->
         <div class="tags-list-more">
-            <a href="javascript:;" id="tabBar" class="waves-circle-btn">
+            <a href="javascript:;" id="tabMore" class="waves-circle-btn">
                 <i class="iconfont icon-more"></i>
             </a>
         </div>
