--- a/article.html
+++ b/article.html
@@ -8,13 +8,9 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet"  href="iconfont/iconfont.css" />
-    <!-- <link rel="stylesheet"  href="css/monokai-sublime.css" /> -->
     <link rel="stylesheet"  href="css/atom-one-dark.css" />
     <link rel="stylesheet"  href="css/waves.min.css" />
     <link rel="stylesheet"  href="css/style.css" />
-    <style type="text/css">
-
-</style>
 </head>
 <body>
     <div id="loading" class="active"></div>
@@ -87,14 +83,14 @@
         <header id="header" class="top-header">
             <div class="flex-row">
                 <a class="header-icon waves-circle-btn" href="javascript:;" id="menu-open">
-                 <i class="iconfont icon-ego-menu"></i>
-             </a>
-             <!-- top标题 -->
-             <h2 class="header-title flex-col text-clip">
-                 xxxxxxxxxxxxxxxxxxxx
-             </h2>
-             <!-- 搜索框 -->
-             <div id="search-warp" class="search-warp">
+                   <i class="iconfont icon-ego-menu"></i>
+               </a>
+               <!-- top标题 -->
+               <h2 class="header-title flex-col text-clip">
+                   xxxxxxxxxxxxxxxxxxxx
+               </h2>
+               <!-- 搜索框 -->
+               <div id="search-warp" class="search-warp">
                 <a class="header-icon waves-circle-btn" href="javascript:;" id="search-back">
                     <i class="iconfont icon-backoff"></i>
                 </a>
@@ -119,10 +115,10 @@
 
 <article id="article" class="warp fade">
     <div class="article-detail">
-     <h1 class="title fade-scale">xxxxxxxxxxxxxx</h1>
-     <h5 class="subtitle  fade-scale">22222222222</h5>
+       <h1 class="title fade-scale">xxxxxxxxxxxxxx</h1>
+       <h5 class="subtitle  fade-scale">22222222222</h5>
 
-     <pre><code class="javascript">Node.nodeName   //返回节点名称，只读
+       <pre><code class="javascript">Node.nodeName   //返回节点名称，只读
         Node.nodeType   //返回节点类型的常数值，只读
         Node.nodeValue  //返回Text或Comment节点的文本值，只读
         Node.textContent  //返回当前节点和它的所有后代节点的文本内容，可读写
@@ -356,7 +352,7 @@
 
     <!-- 文章分享 -->
     <div class="article-share-warp">
-        <div class="article-share" id="article-share">
+        <div class="article-share"  id="articleShare">
             <ul class="article-share-item">
                 <li>
                     <a href="javascript:;" class="qq">
@@ -364,7 +360,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="javascript:;" class="weixin">
+                    <a href="javascript:;" class="weixin wxShareBtn">
                         <i class="iconfont icon-weixin"></i>
                     </a>
                 </li>
@@ -391,7 +387,7 @@
         </a>
     </div>
     <div class="next flex-col">
-     <a href="" class="fade ar">
+       <a href="" class="fade ar">
         <div class="tips">Next&nbsp;></div>
         <h4 class="text-clip post-title-link">ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss</h4>
     </a>
@@ -429,7 +425,7 @@
             <p>QQ</p>
         </li>
         <li class="flex-col">
-            <a href="javascript:;" class="weixin">
+            <a href="javascript:;" class="weixin wxShareBtn">
                 <i class="iconfont icon-weixin"></i>
             </a>
             <p>微信</p>
@@ -441,6 +437,13 @@
             <p>微博</p>
         </li>
     </ul>
+</div>
+
+<!-- wx share -->
+<div class="wxShareWarp" id="wxShareWarp">
+    <a class="close" href="javascript:;"><i class="iconfont icon-guanbi"></i></a>
+    <p>扫一扫，分享到微信</p>
+    <div id="qrcode"></div>
 </div>
 
 <!-- search-panel -->
@@ -469,16 +472,12 @@
     }
 </script>
 <script src="js/highlight.min.js"></script>
+<script type="text/javascript" src="js/qrcode.js"></script>
 <script type="text/javascript" src="js/waves.min.js"></script>
 <script type="text/javascript" src="js/outils.min.js"></script>
 <script type="text/javascript" src="js/ajax.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/search.js"></script>
-<script>
-    hljs.initHighlightingOnLoad();
-    Array.prototype.slice.call(document.querySelectorAll('pre')).forEach(function(block) {
-        hljs.highlightBlock(block);
-    });
-</script>
+
 </body>
 </html>
