--- a/article.html
+++ b/article.html
@@ -307,10 +307,6 @@
 </code></pre>
 <p>👉<a href="https://github.com/microzz" target="_blank" rel="external">GitHub</a></p>
 
-
-
-
-
 <!-- 文章打赏 -->
 <div class="article-reward">
     <a href="javascript:;" class="article-reward-btn btn-glow waves-circle-btn" id="rewardBtn">赏</a>
@@ -320,18 +316,16 @@
 <div id="rewardModel" class="page-modal reward-lay">
     <a class="close" href="javascript:;"><i class="iconfont icon-guanbi"></i></a>
     <h3 class="reward-title">
-        <i class="icon icon-quote-left"></i>
-        \（￣︶￣）/  嘘寒问暖，不如打笔巨款？
-        <i class="icon icon-quote-right"></i>
+
     </h3>
     <ul class="reward-items flex">
         <li class="row-rol">
-            <img src="img/avatar.jpg" title="微信打赏二维码" alt="微信打赏二维码">
-            <p>微信</p>
+            <img src="img/1.jpg" title="微信打赏二维码" alt="微信打赏二维码">
+            <!-- <p>微信</p> -->
         </li>
         <li class="row-rol">
-            <img src="img/avatar.jpg" title="支付宝打赏二维码" alt="支付宝打赏二维码">
-            <p>支付宝</p>
+            <img src="img/2.jpg" title="支付宝打赏二维码" alt="支付宝打赏二维码">
+            <!-- <p>支付宝</p> -->
         </li>
     </ul>
 </div>
